ingress/controllers/elwingress/rc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elwingress
  labels:
    app: elwingress
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    run: elwingress
