ingress/controllers/elwingress/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test1
spec:
  rules:
  - host: test.poop
    http:
      paths:
      - backend:
          serviceName: "test-poop"
          servicePort: 80
