ingress/controllers/elwingress/test1.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test1
spec:
  rules:
  - host: test1.platform.prod.aws.cloud.nordstrom.net
    http:
      paths:
      - backend:
          serviceName: test1
          servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: test1
  labels:
    app: test1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    run: test1
