ingress/controllers/elwingress/test2.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test2
spec:
  rules:
  - host: test2.platform.prod.aws.cloud.nordstrom.net
    http:
      paths:
      - backend:
          serviceName: test2
          servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: test2
  labels:
    app: test2
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    run: test2
